--- a/css/slides.css
+++ b/css/slides.css
@@ -1,18 +1,18 @@
 @charset "UTF-8";
-/*  
-                                           
-   _____ _       _              _____  _____ _____ 
+/*
+
+   _____ _       _              _____  _____ _____
   / ___/| (•)   | |           / ____// ____/ ____/  v 3.0.4
- | (___ | |_  __| | ___ ____ | |    | (___| (___  
-  \___ \| | |/ _` |/ _ / __/ | |     \___ \ ___ \ 
+ | (___ | |_  __| | ___ ____ | |    | (___| (___
+  \___ \| | |/ _` |/ _ / __/ | |     \___ \ ___ \
   ____) | | | (_| |  __\__ \ | |____ ____) |___) |
- /_____/|_|_|\__,_|\___/___/  \_____/_____/_____/                               
-                                            
-                                            
+ /_____/|_|_|\__,_|\___/___/  \_____/_____/_____/
+
+
 This file contains styles required for the proper functionality and display
 of your Slides Project.
 
-https://designmodo.com/slides/ 
+https://designmodo.com/slides/
 
 */
 /* CSS RESET */
@@ -58,7 +58,7 @@ html {
   box-sizing: inherit;
 }
 
-/* Additional Fonts: 
+/* Additional Fonts:
 .raleway {
   font-family:Raleway, sans-serif !important;
 }
@@ -72,14 +72,14 @@ html {
   font-family:Georgia, serif !important;
 } */
 /***
- *      __  __              
- *     |  \/  |     ( )      
- *     | \  / | __ _ _ _ __  
- *     | |\/| |/ _` | | '_ \ 
+ *      __  __
+ *     |  \/  |     ( )
+ *     | \  / | __ _ _ _ __
+ *     | |\/| |/ _` | | '_ \
  *     | |  | | (_| | | | | |
  *     |_|  |_|\__,_|_|_| |_|
- *                           
- *                           
+ *
+ *
  */
 html {
   margin: 0;
@@ -1172,14 +1172,14 @@ form.center input, form.center textarea {
   }
 }
 /***
- *       _____ _       _          
- *      / ___/| ( )   | |         
+ *       _____ _       _
+ *      / ___/| ( )   | |
  *     | (___ | |_  __| | ________
  *      \___ \| | |/ _` |/ , / __/
  *      ____) | | | (_| |  __\__ \
  *     /_____/|_|_|\__,_|\___/___/
- *                                
- *                                
+ *
+ *
  */
 .slide {
   position: fixed;
@@ -1898,32 +1898,30 @@ html.mobile .showForMobile {
 }
 
 /***
- *      _____                 _     
- *     |  __ \               | |    
- *     | |__) __ _ _ __   ___| |____ 
+ *      _____                 _
+ *     |  __ \               | |
+ *     | |__) __ _ _ __   ___| |____
  *     |  ___/ _` | '_ \ / _ | / __/
  *     | |  | (_| | | | |  __| \__ \
  *     |_|   \__,_|_| |_|\___|_/___/
- *                                  
- *                                  
+ *
+ *
  */
 .panel {
-  position: fixed;
-  left: 0;
-  width: 100%;
-  padding: 1.5% 1.8%;
-  z-index: 200;
-  text-align: center;
-  font-size: 22px;
-  pointer-events: none;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+    font-weight: 900;
+    color: #2F2D2E !important;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 50;
+    -webkit-perspective: 2000px;
+    perspective: 2000px;
+    position: fixed !important;
+    height: 60px;
+    width: 100%;
+    padding: 4px 15px 0 15px;
+    background: rgba(255,255,255,.98);
+    box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07), inset 0 -2px 0 0 #f6f9fc;
 }
 .panel.large {
   padding: 2.78% 5%;
@@ -2264,14 +2262,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
   }
 }
 /***
- *       _____       _      
- *      / ___/( )   | |     
- *     | (___  _  __| | ___ 
+ *       _____       _
+ *      / ___/( )   | |
+ *     | (___  _  __| | ___
  *      \___ \| |/ _` |/ _ \
  *      ____) | | (_| |  __/
  *     /_____/|_|\__,_|\___/
- *                          
- *                          
+ *
+ *
  */
 .side {
   position: fixed;
@@ -2520,14 +2518,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 
 /* End of Side */
 /***
- *       _____ _                    
- *      / ___/| |                   
- *     | (___ | |__   __ _ _ __ ___ 
+ *       _____ _
+ *      / ___/| |
+ *     | (___ | |__   __ _ _ __ ___
  *      \___ \| '_ \ / _` | '__/ _ \
  *      ____) | | | | (_| | | |  __/
  *     /_____/|_| |_|\__,_|_|  \___/
- *                                  
- *                                  
+ *
+ *
  */
 .dropdown {
   position: fixed;
@@ -2690,14 +2688,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *       _____       _      _                
- *      / ___/( )   | |    | |               
+ *       _____       _      _
+ *      / ___/( )   | |    | |
  *     | (___  _  __| | ___| |__   __ _ _ ___
  *      \___ \| |/ _` |/ _ | '_ \ / _` | '__/
- *      ____) | | (_| |  __| |_) | (_| | |   
- *     /_____/|_|\__,_|\___|_.__/ \__,_|_|   
- *                                           
- *                                           
+ *      ____) | | (_| |  __| |_) | (_| | |
+ *     /_____/|_|\__,_|\___|_.__/ \__,_|_|
+ *
+ *
  */
 .sidebar {
   position: fixed;
@@ -2906,14 +2904,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *      _____                        
- *     |  __ \                       
- *     | |__) __  _ __  _   _ _ __  
- *     |  ___/ _ \| '_ \| | | | '_ \ 
+ *      _____
+ *     |  __ \
+ *     | |__) __  _ __  _   _ _ __
+ *     |  ___/ _ \| '_ \| | | | '_ \
  *     | |  | (_) | |_) | |_| | |_) |
- *     |_|   \___/| .__/ \__,_| .__/ 
- *                | |         | |    
- *                |_|         |_|    
+ *     |_|   \___/| .__/ \__,_| .__/
+ *                | |         | |
+ *                |_|         |_|
  */
 /* POPUP */
 .popup {
@@ -3099,14 +3097,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *      ______                       _____                            
- *     |___  /                      |_   _|                           
- *        / / ___   ___  _ __ ___     | |  _ __ ___   __ _  __ _  ___ 
+ *      ______                       _____
+ *     |___  /                      |_   _|
+ *        / / ___   ___  _ __ ___     | |  _ __ ___   __ _  __ _  ___
  *       / / / _ \ / _ \| '_ ` _ \    | | | '_ ` _ \ / _` |/ _` |/ _ \
  *      / /_| (_) | (_) | | | | | |  _| |_| | | | | | (_| | (_| |  __/
  *     /_____\___/ \___/|_| |_| |_| |_____|_| |_| |_|\__,_|\__, |\___/
- *                                                          __/ |     
- *                                                         |___/      
+ *                                                          __/ |
+ *                                                         |___/
  */
 [data-action="zoom"] {
   cursor: pointer;
@@ -3167,14 +3165,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *       _____ _ _     _           
- *      / ___/| (_)   | |          
- *     | (___ | |_  __| | ___ _ __ 
+ *       _____ _ _     _
+ *      / ___/| (_)   | |
+ *     | (___ | |_  __| | ___ _ __
  *      \___ \| | |/ _` |/ _ \ '__/
- *      ____) | | | (_| |  __/ |   
- *     /_____/|_|_|\__,_|\___/_|   
- *                                 
- *                                 
+ *      ____) | | | (_| |  __/ |
+ *     /_____/|_|_|\__,_|\___/_|
+ *
+ *
  */
 .slider {
   position: relative;
@@ -3215,7 +3213,7 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 		.           ,                              o
 		 *                 ¤     ~            .·
 				______  __  __          _       *
-			 |  ___/ / _// _|   *    | |        
+			 |  ___/ / _// _|   *    | |
 			 | |___ | |_| |_ ___  ___| |_ ____
 		.  |  __/ |  _|  _/ _ \/ __| __/ __/
 	 ¯   | |____| | | ||  __| (__| |_\__ \    ¨
@@ -3490,14 +3488,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *                                       _           _   ______ _                           _       
- *         /\         ( )               | |         | | |  ___/| |                         | |      
- *        /  \   _ __  _ _ __ ___   __ _| |_ ___  __| | | |___ | | ___ _ __ ___   ___ _ __ | |_ ___ 
+ *                                       _           _   ______ _                           _
+ *         /\         ( )               | |         | | |  ___/| |                         | |
+ *        /  \   _ __  _ _ __ ___   __ _| |_ ___  __| | | |___ | | ___ _ __ ___   ___ _ __ | |_ ___
  *       / /\ \ | '_ \| | '_ ` _ \ / _` | __/ _ \/ _` | |  __/ | |/ _ \ '_ ` _ \ / _ \ '_ \| __/ __/
  *      / ____ \| | | | | | | | | | (_| | ||  __/ (_| | | |____| |  __/ | | | | |  __/ | | | |_\__ \
  *     /_/    \_\_| |_|_|_| |_| |_|\__,_|\__\___/\__,_| |_____/|_|\___/_| |_| |_|\___/_| |_|\__|___/
- *                                                                                                  
- *                                                                                                  
+ *
+ *
  */
 .animated [class*="ae-"] {
   -webkit-backface-visibility: hidden;
@@ -4356,14 +4354,14 @@ html:not(.page-loaded) .slides.animated.scroll .slide {
 }
 
 /***
- *      ____             _                                   _    ______  __  __          _       
- *     |  _ \           | |                                 | |  |  ____|/ _|/ _|        | |      
- *     | |_) | __ _  ___| | ____ _ _ __ ___  _   _ _ __   __| |  | |__  | |_| |_ ___  ___| |_ ___ 
+ *      ____             _                                   _    ______  __  __          _
+ *     |  _ \           | |                                 | |  |  ____|/ _|/ _|        | |
+ *     | |_) | __ _  ___| | ____ _ _ __ ___  _   _ _ __   __| |  | |__  | |_| |_ ___  ___| |_ ___
  *     |  _ < / _` |/ __| |/ / _` | '__/ _ \| | | | '_ \ / _` |  |  __| |  _|  _/ _ \/ __| __/ __|
  *     | |_) | (_| | (__|   < (_| | | | (_) | |_| | | | | (_| |  | |____| | | ||  __/ (__| |_\__ \
  *     |____/ \__,_|\___|_|\_\__, |_|  \___/ \__,_|_| |_|\__,_|  |______|_| |_| \___|\___|\__|___/
- *                            __/ |                                                               
- *                           |___/                                                                
+ *                            __/ |
+ *                           |___/
  */
 /* KEN BURNS */
 .slides.animated .kenBurns .background,
@@ -5059,7 +5057,7 @@ body {
 /* Colors */
 .white {
   background: #fff !important;
-  color: #202020 !important;
+  color: #2F2D2E !important;
 }
 .white svg {
   fill: #202020 !important;
@@ -5223,7 +5221,7 @@ body {
 }
 
 .blue {
-  background: #2196F3 !important;
+  background: #1072BB !important;
   color: #fff !important;
 }
 .blue svg {
@@ -6060,9 +6058,9 @@ body {
   }
 }
 /*
-	_____          _             
- |  __ \( )     | |            
- | |  | |_  __ _| | ___   __ _ 
+	_____          _
+ |  __ \( )     | |
+ | |  | |_  __ _| | ___   __ _
  | |  | | |/ _` | |/ _ \ / _` |
  | |__| | | (_| | | (_) | (_| |
  |_____/|_|\__,_|_|\___/ \__, |
@@ -6141,7 +6139,7 @@ body {
   display: none;
 }
 
-/* 
+/*
 .dialogContainer > .dialog:nth-child(1){ -webkit-transition-delay: 0.1s; transition-delay: 0.1s; }
 .dialogContainer > .dialog:nth-child(2){ -webkit-transition-delay: 0.2s; transition-delay: 0.2s; }
 .dialogContainer > .dialog:nth-child(3){ -webkit-transition-delay: 0.3s; transition-delay: 0.3s; }
