--- a/css/slides.css
+++ b/css/slides.css
@@ -1905,7 +1905,12 @@ html.mobile .showForMobile {
     padding-top: 0;
     padding-bottom: 0;
 }
-/* footer CARDS */
+.img-fade {
+  background: rgba(16,114,187,0.60);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 .globalFooterCards .container-xl, a.globalFooterCard {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1923,26 +1928,13 @@ html.mobile .showForMobile {
     max-width: 1040px;
 }
 .container-xl img {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    top: calc(50% - 75px);
-}
 
-a.globalFooterCard img, a.globalFooterCard svg, div.globalFooterCard img, div.globalFooterCard svg {
-    position: absolute;
-    width: 130px;
-    height: 130px;
-    left: -35px;
-    top: calc(50% - 65px);
 }
 @media (min-width: 880px) {
   a.globalFooterCard {padding-left: 120px;}
-  a.globalFooterCard img, a.globalFooterCard svg, div.globalFooterCard img, div.globalFooterCard svg {left: -35px;}
 }
 
 @media (min-width: 670px){
-  a.globalFooterCard img, a.globalFooterCard svg, div.globalFooterCard img, div.globalFooterCard svg {left: -50px;}
   a.globalFooterCard {flex-basis: 1% !important;padding-left: 100px;}
 }
 
@@ -1963,7 +1955,7 @@ a.globalFooterCard {
     -ms-flex-pack: center;
     justify-content: center;
     overflow: hidden;
-    padding: 40px 40px 40px 20px;
+    padding: 0px;
     background-color: #fff;
     border-radius: 4px;
     -webkit-transition-property: color,background-color,box-shadow,-webkit-transform;
@@ -1981,25 +1973,15 @@ a.globalFooterCard {
 }
 
 a.globalFooterCard p {
-    margin: 5px 0 0;
+    z-index: 5;
+    position: absolute;
 }
 
 a.globalFooterCard h2 {
-    margin: 0 0 5px;
+    margin: -30px 15px 5px;
     white-space: normal;
-}
-a.globalFooterCard:after {
-    content: '';
+    z-index: 5;
     position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: #aab7c4;
-    pointer-events: none;
-    opacity: 0;
-    -webkit-transition: opacity .15s;
-    transition: opacity .15s;
 }
 
 #intro {
