--- a/css/slides.css
+++ b/css/slides.css
@@ -2035,12 +2035,18 @@ button:hover {
   }
 /*iphone4+*/
 @media only screen
-  and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
-    h1{font-size: 36px;}
+  and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+    h1{font-size: 33px !important;}
+    p {font-size: 20px;}
+    .small {font-size: 20px !important;}
     .hero p {font-size: 22px;}
-    .common-Button{font-size: 14px;margin: 8px;}
-
-  }
+    .common-Button{font-size: 14px;}
+    .container .wrap {padding: calc(5.56% + 50px) calc(5% + 0px) !important;}
+    .flex-phone {flex-wrap: wrap !important;}
+    .contact h1 {margin-top: 20px;}
+    .col-6-12 a {margin-bottom: 24px;}
+    .col-tablet-1-2 {width: 100% !important;}
+}
 /* iphone6+ Portrait and Landscape */
 @media only screen
   and (min-device-width: 300px)
