--- a/css/slides.css
+++ b/css/slides.css
@@ -1983,9 +1983,44 @@ a.globalFooterCard h2 {
     z-index: 5;
     position: absolute;
 }
-
+.map {
+    width: 90%;
+    background-size: cover;
+    z-index: -1;
+    position: absolute;
+    right: 0;
+    margin: -66% -40% 0%;
+    max-width: none;
+}
+.headquarters {
+    position: relative;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 0 0 1px #e1e4e6;
+    box-sizing: border-box;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    padding-left: 110px;
+}
+.headquarters h3 {
+  margin-bottom: 0;
+}
+.headquarters:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 71px;
+    height: 71px;
+    left: 20px;
+    top: 50%;
+    margin-top: -36px;
+    background-image: url(../assets/img/backgrounds/sthlm_crown.png);
+}
 #intro {
   height: 660px;
+}
+.container-md {
+  height: 460px !important;
 }
 .common-Button {
     white-space: nowrap;
@@ -2054,16 +2089,29 @@ button:hover {
 }
 /* iphone6+ Portrait and Landscape */
 @media only screen
-  and (min-device-width: 300px)
+  and (min-device-width: 321px)
   and (max-device-width: 736px)
   and (-webkit-min-device-pixel-ratio: 3) {
+
+
+}
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 803px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
 }
 /* Portrait and Landscape */
 @media only screen
   and (min-device-width: 768px)
   and (max-device-width: 1023px)
   and (-webkit-min-device-pixel-ratio: 1) {
-    #intro {height: 460px;}
+}
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+
 }
 /***
  *      _____                 _
