--- a/css/slides.css
+++ b/css/slides.css
@@ -1904,6 +1904,11 @@ html.mobile .showForMobile {
   width: 100%;
   height: 100%;
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 .container-lg {
     margin: 0 auto;
@@ -1929,7 +1934,74 @@ html.mobile .showForMobile {
 .container-wide, .container-xl {
     max-width: 1040px;
 }
+/*
+  project card
+*/
+.container-wide {
+    margin: 0 auto;
+    padding: 0 20px;
+    width: 100%;
+}
+.Gallery-container {
+    position: relative;
+    z-index: 10;
+}
+.Section-quote {
+    background: #f4f4f4;
+    box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    margin: 30px;
+}
+.Section-quotePhoto--lyft {
+    background-color: #a19273;
+    background-image: url(../assets/img/backgrounds/mansion.jpg);
+}
+.Section-quotePhoto {
+    width: 100%;
+    min-height: 370px;
+    background-size: cover;
+    background-position: 50% 50%;
+}
 
+.Quote--lyft {
+    padding-top: 40px;
+}
+.Quote {
+    margin: 0;
+    padding: 40px;
+    position: relative;
+    z-index: 5;
+    color: #fff;
+}
+.Quote h2 {
+    margin: 0 0 10px -2px;
+}
+.Quote p {
+    position: relative;
+    font-size: 20px;
+    line-height: 1.6em;
+    margin-bottom: 0;
+}
+.Quote--lyft:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    transform: translate(0);
+}
+@media (min-width: 670px) {
+  .Section-quote--horizontal .Section-quotePhoto {position: absolute;top: 0;left: 0;right: 0;bottom: 0;min-height: auto;}
+  .Quote--lyft {padding-top: 66px;}
+  .Quote--lyft:before {opacity: .9216;}
+  .Quote {padding: 40px;}
+  .col-sm-6 {flex-basis: 50%;max-width: 50%;}
+}
 /*
   global footer cards
 */
@@ -5532,7 +5604,10 @@ body {
 .stroke.button.indigo svg {
   fill: #3F51B5 !important;
 }
-
+.light-blue {
+  background-color: #f2f9ff !important;
+  color: #fff;
+}
 .blue {
   background: #1072BB !important;
   color: #fff !important;
