--- a/css/slides.css
+++ b/css/slides.css
@@ -2279,9 +2279,6 @@ accordion menu
 -------------------------------- */
 .cd-accordion-menu {
 	background: white;
-	color: #333;
-	border-radius: 8px;
-  border: 1px solid #C5D0DE;
 }
 .cd-accordion-menu ul {
 	/* by default hide all sub menus */
@@ -2292,6 +2289,7 @@ accordion menu
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+
 }
 .cd-accordion-menu input[type=checkbox] {
 	/* hide native checkbox */
@@ -2304,19 +2302,18 @@ accordion menu
 	padding: 24px;
 	font-size: 24px;
 	cursor: pointer;
-  box-shadow: inset 0 -1px 0 0 #C5D0DE;
   width: 100%
 }
-.cd-accordion-menu label:hover, .cd-accordion-menu label:active {
+.has-children {
+  border-bottom: 1px solid #C5D0DE;
+}
+.cd-accordion-menu label:hover {
   color: #1072BB;
 }
 .cd-accordion-menu input[type=checkbox]:checked+label+ul, .cd-accordion-menu input[type=checkbox]:checked+label:nth-of-type(n)+ul {
 	/* use label:nth-of-type(n) to fix a bug on safari (<= 8.0.8) with multiple adjacent-sibling selectors*/
 	/* show children when item is checked */
 	display: block;
-}
-.has-children:active {
-	background: rgba(16, 114, 187, 0.1);
 }
 .cd-accordion-menu.animated label::before {
   /* this class is used if you're using jquery to animate the accordion */
