--- a/css/slides.css
+++ b/css/slides.css
@@ -315,7 +315,7 @@ p.small {
 
 /* Background Fade */
 .fade .content {
-  background: rgba(16,113,187,0.80);
+  background: rgba(16,113,187,0.60);
 }
 /*default*/
 
@@ -600,7 +600,7 @@ p.small {
 .container-lg {
     margin: 0 auto;
     padding: 0 22px;
-    width: 93%;
+    width: 100%;
     max-width: 1040px;
 }
 .globalFooterCTA .buttons {
@@ -719,25 +719,28 @@ contact page
     -webkit-transition: all .15s ease;
     transition: all .15s ease;
 }
-  .customFooter p {
-    font-size: 18px;
-    line-height: 1.8;
-  }
+.customFooter p {
+  font-size: 16px;
+  line-height: 15px;
+}
+.customFooter .container-lg {
+  padding-top: 5%;
+  padding-bottom: 3%
+}
+.col-5-10 {
+  max-width: 20%;
+}
 
-  .col-5-10 {
-    max-width: 20%;
-  }
+.wide-col {
+  padding-bottom: 20px;
+}
 
-  .wide-col {
-    padding-bottom: 20px;
+@media screen and (max-width: 1024px) and (min-width: 546px){
+  .grid .col-5-10:not(.wide-col) {
+    max-width: 50% !important;
+    width: 50% !important;
   }
-
-  @media screen and (max-width: 1024px) and (min-width: 546px){
-    .grid .col-5-10:not(.wide-col) {
-      max-width: 50% !important;
-      width: 50% !important;
-    }
-  }
+}
 /*iphone4+*/
 @media only screen
   and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -756,6 +759,7 @@ contact page
     .Section-quotePhoto--lyft {height: 150px;min-height: 150px !important;}
     .Section-quote {margin:0;}
     .border-bottom{width: 80%;}
+    .contact h1 {margin-top: 20px;}
 }
 /* iphone6+ Portrait and Landscape */
 @media only screen
