--- a/css/slides.css
+++ b/css/slides.css
@@ -453,20 +453,31 @@ p.small {
   font-size: 16px;
 }
 .cc_container {
-    background: #fff;
-    color: #607D8B !important;
-    font-size: 14px !important;
-    font-weight: 400 !important;
-    font-family: "Source Sans Pro", Calibri, Helvetica, Arial;
-    box-sizing: border-box;
-    left: 20px !important;
-    width: 280px !important;
+  background: rgba(246,249,252,.9) !important;
+  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08) !important;
+  border: none !important;
+  color: #607D8B !important;
+  font-size: 13px !important;
+  font-weight: 400 !important;
+  font-family: "Source Sans Pro", Calibri, Helvetica, Arial;
+  box-sizing: border-box;
+  left: 20px !important;
+  width: 280px !important;
+  padding: 15px 0px 50px 10px !important;
 }
 .cc_container .cc_btn, .cc_container .cc_btn:visited {
-  background: #1072bb !important;
+  background: rgba(35,103,164,0.70) !important;
   color: #fff !important;
   font-weight: bold !important;
+  padding: 8px 16px !important;
+  left: 0 !important;
 }
+.cc_container .cc_btn {
+  left: 10px !important;
+  right: 10px !important;
+  bottom: 10px !important;
+}
+.cc_logo { display: none !important;}
 .center-m-down {
       margin: 0 auto;
     text-align: center;
