trying to fix the different slides

--- a/css/slides.css
+++ b/css/slides.css
@@ -800,7 +800,10 @@ contact page
 .wide-col {
   padding-bottom: 20px;
 }
-#ispect img {     margin: 0% -100% -10% -60% !important; }
+#ispect-details .col-6-12 {
+    max-width: 50%;
+}
+#ispect img {    margin: 0% -100% -10% -120% !important; }
 @media screen and (max-width: 1024px) and (min-width: 546px){
   .grid .col-5-10:not(.wide-col) {
     max-width: 50% !important;
